WindGroup Dev/src/objects/iOPS_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is to be used for iOPS configuration.</description>
    <fields>
        <fullName>Afternoon_Shift_Interval__c</fullName>
        <label>Afternoon Shift Interval</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Morning_Shift_Interval__c</fullName>
        <label>Morning Shift Interval</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Night_Shift_Interval__c</fullName>
        <label>Night Shift Interval</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>iOPS Configuration</label>
</CustomObject>